# langchain_training

./: .env_example  .gitignore  README.md  ReAct.py  main.py  pyproject.toml  rag.py  rag_index.py  streaming.py
agent_with_memory/: main.py
langhchain_studies/: agentes.py  debugging.py  llm_by_api.py  model.py  tavely.py  tools.py
query_translation_rag/: main.py  query_translation_prompts.py
rag_with_documents/: main.py
vector_store/db_faiss/: index.faiss  index.pkl
youtube_transcript/: get_transcription.py  main.py  transcricao.txt
